diseño animacion y layout terminados

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <a href="#" class="text-dark">Iniciar sesion</a>
-          <button class="btn bg-info text-white my-2 my-sm-0" type="submit">
+          <button class="registrate text-white my-2 my-sm-0" type="submit">
             Registrarte
           </button>
         </form>
