check list de codigo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- meta seo -->
+    <meta name="autor" content="Giovanni Di Rosa" />
+    <meta name="description" content="trekking" />
+    <meta
+      name="keywords"
+      content="montaña, caracteristica, trekking, trekk, camping"
+    />
     <title>Examen de modulo-2 trekking</title>
     <!-- mis estilos -->
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -91,7 +98,7 @@
 
     <!-- fin del contenido de caracteristicas -->
 
-    <!-- seccion de precios -->
+    <!-- section de precios -->
 <!-- padre -->
     <section class="precios">
 <!-- hijo01 -->
@@ -143,13 +150,19 @@
   
 </div>
     </section>
-
+<!-- inicio de footer -->
     <footer>
+      <!-- hijo01 -->
+<div class="final">
 
-      <div class="uno">Legal</div>
-      <div class="dos">Cookies</div>
-      <div class="tres">Sobre anuncios</div>
-      <div class="cuatro">®2018 Trekk-in SPA</div>
+  <div class="uno">Legal</div>
+  <div class="dos">Cookies</div>
+  <div class="tres">Sobre anuncios</div>
+  
+  
+</div>
+<!-- hijo02 -->
+<div class="cuatro"> ®2018 Trekk-in SPA</div>
 
     </footer>
 
